cluster/beehive/backend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: beehive-backend
  name: beehive-backend
  namespace: beehive
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: beehive-backend
  template:
    metadata:
      labels:
        app: beehive-backend
    spec:
      imagePullSecrets:
        - name: gitlab-token-beehive-backend
      containers:
        - image: registry.login.no/tekkom/web/beehive/public-api:1.1.2-dev@sha256:2dd05fef6e4062b3a181aaa6a90bff53ed47ee99992f6ebdc92d47cef2e65e88
          imagePullPolicy: Always
          name: beehive-backend
          ports:
            - containerPort: 8080
              name: 8080tcp
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
          # volumeMounts:
          #   - name: tls-certs
          #     readOnly: true
          #     mountPath: "/tls"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
              topologyKey: kubernetes.io/hostname
      # volumes:
      #   - name: tls-certs
      #     secret:
      #       secretName: backend-self-signed
      #       items:
      #         - key: tls.crt
      #           path: tls.crt
      #         - key: tls.key
      #           path: tls.key
