cluster/beehive/backend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beehive-backend-ingress
  namespace: beehive
spec:
  ingressClassName: nginx-ntnu
  tls:
    - hosts:
        - dev.workerbee.login.no
  rules:
    - host: dev.workerbee.login.no
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: beehive-backend
                port:
                  number: 8080
